# html_form_to_dict

./: .coveragerc  .gitignore  README.md  setup.cfg  setup.py  upload-to-pypi.sh
.github/workflows/: python-package.yml
html_form_to_dict/: __init__.py
html_form_to_dict/tests/: test_html_form_to_dict.py
